The client still requires the preview at runtime
am v sad