@@ -29,7 +29,7 @@ The built jars can be found in `PSP031-client/target` and `PSP031-server/target`
 To run the client:
 
 ```shell
-java -jar PSP031-client-1.0-SNAPSHOT.jar
+java --enable-preview -jar PSP031-client-1.0-SNAPSHOT.jar
 ```
 
 To run the server (it requires preview features):
